# semicolon

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
semicolon/: __init__.py  cli.py  formatter.py  keywords.py
tests/: test_formatter.py
